<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/defaultConfiguration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/default_configuration" />

    <Button
        android:id="@+id/photoConfiguration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/photo_configuration" />

    <Button
        android:id="@+id/videoConfiguration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/video_configuration" />

    <Button
        android:id="@+id/videoLimitedConfiguration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/video_limited_configuration" />

    <Button
        android:id="@+id/universalConfiguration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/universal_configuration" />

    <Button
        android:id="@+id/dialogDemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/using_within_dialog" />

    <Button
        android:id="@+id/customDemo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/custom_camera_layout" />

    <Button
        android:id="@+id/heartBeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/hearbeat_camera_layout" />

</LinearLayout>